[gd_scene load_steps=2 format=3 uid="uid://cc4kirogjlffu"]

[ext_resource type="Script" path="res://code/Menu.gd" id="1_idy84"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idy84")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_right = 157.0
offset_bottom = 182.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
text = "Ilość graczy"

[node name="gracze" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
text = "Ilość szeregów"

[node name="szeregi" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "5"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
text = "Ilość kolumn"

[node name="kolumny" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "5"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Rooms" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Konfiguracja pokoi
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Rooms" to="." method="_on_rooms_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
